[package]
name = "gurl"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
termsize = "0.1"
chrono = { version = "0.4.40", features = [ "serde" ] }
colored = "3.0.0"
# https://stackoverflow.com/questions/58892528/get-console-width-in-rust
